testdata/valid/computedcolumn_03.lisp
(defcolumns (X :i16))
(defcomputedcolumn (Y :i16 :fwd) (+ X (shift Y -1)))
